--- a/wakepark_front/index.html
+++ b/wakepark_front/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Aurelia</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
+    <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Bootstrap style -->
+    <link rel="stylesheet" href="css/hero-slider-style.css">
+    <!-- Hero slider style (https://codyhouse.co/gem/hero-slider/) -->
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
+    <link rel="stylesheet" href="css/tooplate-style.css">
+    <title>Aurelia</title>
   </head>
 
   <body aurelia-app="main">
