--- a/wakepark_front/src/app.html
+++ b/wakepark_front/src/app.html
@@ -1,3 +1,360 @@
 <template>
-  <h1>${message}</h1>
+    <div class="cd-bg-video-wrapper">
+      <!-- video element will be loaded using jQuery -->
+    </div>
+    <div class="cd-hero">
+
+      <!-- Navigation -->
+      <div class="cd-slider-nav">
+        <div class="img-container">
+          <img src="img/FB-profiil-M%C3%A4nniku.png" width="78px" height="78px">
+        </div>
+        <div class="container">
+          <nav class="navbar">
+            <div class="tm-navbar-bg">
+              <a class="navbar-brand text-uppercase" href="#">MÄNNIKU WAKEPARK</a>
+              <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
+                &#9776;
+              </button>
+              <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
+                <ul class="nav navbar-nav">
+                  <li class="nav-item active selected">
+                    <a class="nav-link" href="#0" data-no="1">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#0" data-no="2">Info</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#0" data-no="3">Kontakt</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#0" data-no="4">Login</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+      <ul class="cd-hero-slider">  <!-- autoplay -->
+
+        <!-- Page 1 Home -->
+        <li class="selected">
+          <div class="cd-full-width">
+            <div class="container js-tm-page-content tm-page-1 tm-section-margin-t-small" data-page-no="1">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-home-container-outer">
+                    <div class="tm-home-container">
+                      <div class="tm-home-title-container">
+                        <h2 class="tm-text-title text-xs-center tm-home-title">Männiku Wakepark</h2>
+                      </div>
+                      <div class="tm-home-description-container tm-bg-dark-blue">
+                        <div class="queue">
+                          <div class="column">blabla</div>
+                          <div class="column">blabla</div>
+                          <div class="column">blabla</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tm-home-container-bg"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .cd-full-width -->
+        </li>
+
+        <!-- Page 2 Info -->
+        <li>
+          <div class="cd-full-width">
+            <div class="container js-tm-page-content tm-section-margin-t" data-page-no="2">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-flex">
+                    <div class="col-lg-6 tm-white-header-container-outer tm-margin-b tm-2-col-left">
+                      <div class="tm-bg-white tm-white-header-container">
+                        <h2 class="tm-text-title tm-text-title-small">VEELAUASÕIT</h2>
+                      </div>
+                      <div class="tm-bg-dark-blue text-xs-left tm-textbox tm-textbox-padding tm-white-header-body tm-white-border tm-2-col-equal-height">
+                        <p class="tm-text">1 korra pilet 10 minutit: 10€<br>3 korra pilet: 25€ / 27€<br>10 korra pilet: 65€ / 75€<br>30 korra pilet: 150€ / 180€<br>50 korra pilet: 200€ / 230€<br>100 korra pilet: 310€ / 360€</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 tm-white-header-container-outer tm-margin-b tm-2-col-right">
+                      <div class="tm-bg-white tm-white-header-container">
+                        <h2 class="tm-text-title tm-text-title-small">RAJA BRONEERIMINE</h2>
+                      </div>
+                      <div class="tm-bg-dark-blue text-xs-left tm-textbox tm-textbox-padding tm-white-header-body tm-white-border tm-2-col-equal-height">
+                        <p class="tm-text">E-N (12:00 - 17:00):<br>-1 rada 65€/tund<br>-2 rada 130€/tund<br><br>E-N (17:00 - päikeseloojang) ja R-P:<br>-1 rada 90€/tund<br>-2 rada küsi pakkumist</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-flex">
+                    <div class="col-lg-6 tm-margin-b tm-2-col-left">
+                      <div class="tm-bg-white tm-textbox-padding tm-height-100">
+                        <h2 class="tm-text-title tm-text-title-small tm-header-margin-b">MUUD TEENUSED</h2>
+                        <p class="tm-text">SUP laenutus: 10€/tund<br>Kalipso rent: 2€/kord<br>Discgolfi ketaste rent: 3€/3h<br>Sportbatuut: tasuta<br>Võrkpalliväljak: tasuta<br>Kiiged ja liumägi lastele: tasuta<br>Pinksi mängimine: tasuta</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 tm-margin-b tm-2-col-right">
+                      <div class="tm-bg-white tm-textbox-padding tm-height-100">
+                        <h2 class="tm-text-title tm-text-title-small tm-header-margin-b">Sed rhoncus egestas</h2>
+                        <p class="tm-text">Pellentesque augue urna, ultrices sit amet luctus eget, ultricies sit amet ipsum. Nulla sem nisi, commodo sed auctor sed, euismod nec dui.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-flex">
+                    <div class="col-lg-4 tm-margin-b">
+                      <div class="tm-bg-brown tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">Aliquam facilisis ut purus non ultricies. Mauris a auctor turpis. Ut in consequat quam. Integer ex dui, eleifend non mi val, eleifend varius orci.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 tm-margin-b">
+                      <div class="tm-bg-dark-blue tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">Mauris tempor, massa quis viverra suscipit, sapien ipsum condimentum nulla, sed faucibus tellus libero eget dolor. In ornare posuere.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 tm-margin-b">
+                      <div class="tm-bg-dark-brown tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">Donec placerat eget enim vel fringilla. Vivamus nibh nisl, viverra vel nisl eget, feugiat fringilla quam. Naecenas sodales, magna sed.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-flex">
+                    <div class="col-lg-4 tm-sm-margin-b">
+                      <div class="tm-bg-dark-blue tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">Quisque mattis pellentesque. Etiam rutrum neque at diam imperdiet, efficitur tincidunt turpis dignissim. Cras placerat placerat tempor.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 tm-sm-margin-b">
+                      <div class="tm-bg-white tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">Sed nec mi fringilla metus vehicula porttitor. Donec sit amet arcu quis massa mollis condimentum tempor eleifend enim.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 tm-sm-margin-b">
+                      <div class="tm-bg-dark-blue tm-white-border tm-textbox-padding tm-height-100">
+                        <p class="tm-text">In pellentesque, ipsum vitae dapibus ultrices, dui nunc fringilla enim, sit amet placerat nulla felis et nisl.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .cd-full-width -->
+
+        </li>
+
+        <!-- Page 3 Kontakt -->
+        <li>
+          <div class="cd-full-width">
+            <div class="container js-tm-page-content tm-section-margin-t-small" data-page-no="3">
+              <div class="tm-contact-page">
+                <div class="row tm-margin-b">
+                  <div class="col-xs-12">
+                    <div class="tm-bg-white tm-textbox-padding">
+                      <h2 class="tm-text-title tm-margin-b-0">KONTAKT</h2>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-12">
+                    <div class="tm-flex tm-contact-container tm-bg-dark-blue">
+                      <div class="text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
+                        <p class="tm-text">PARK ON AVATUD IGA PÄEV 12.00-22.00! OOTAME KÕIKI SÕITMA!
+                        </p>
+                        <p class="tm-text">Asume Trapi teel, Männikul, Valdeku karjääri ääres</p>
+                        <p class="tm-text">Tel: +372 56652241</p>
+                      </div>
+
+                      <div class="text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
+                        <!-- contact form -->
+                        <form action="index.html" method="post" class="tm-contact-form">
+                          <div class="form-group">
+                            <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name"  required/>
+                          </div>
+                          <div class="form-group">
+                            <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email"  required/>
+                          </div>
+                          <div class="form-group">
+                            <textarea id="contact_message" name="contact_message" class="form-control" rows="5" placeholder="Your message" required></textarea>
+                          </div>
+                          <button type="submit" class="tm-submit-btn">Send</button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .cd-full-width -->
+        </li>
+
+        <!-- Page 4 Login -->
+        <li>
+          <div class="cd-full-width">
+            <p style="text-align: center; font-size: 30px;">LOGI SISSE<br>JA BRONEERI SÕIDUAEG!</p>
+            <div class="container js-tm-page-content tm-section-margin-t-small" data-page-no="4">
+              <div class="tm-contact-page">
+                <div class="row">
+                  <div class="col-xs-12">
+                    <div class="tm-flex tm-contact-container tm-bg-dark-blue">
+                      <div class="text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
+                        <!-- login form -->
+                        <form action="index.html" method="post" class="login-form">
+                          <div class="form-group">
+                            <input type="text" id="username" name="username" class="form-control" placeholder="Username"  required/>
+                          </div>
+                          <div class="form-group">
+                            <input type="password" id="password" name="password" class="form-control" placeholder="Password"  required/>
+                          </div>
+                          <button type="submit" class="tm-submit-btn">Sign in</button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .cd-full-width -->
+        </li>
+      </ul> <!-- .cd-hero-slider -->
+
+      <footer class="tm-footer">
+        <p class="tm-copyright-text pull-xs-right">Copyright &copy; <span class="tm-current-year">2017</span> Your Company
+          | Design: <a rel="nofollow" href="http://www.tooplate.com" class="tm-footer-link" target="_parent">Tooplate</a></p>
+      </footer>
+    </div> <!-- .cd-hero -->
+
+    <script src="js/jquery-1.11.3.min.js"></script>         <!-- jQuery (https://jquery.com/download/) -->
+    <script src="js/tether.min.js"></script>                <!-- http://tether.io/ -->
+    <script src="js/isInViewport.min.js"></script>          <!-- isInViewport js (https://github.com/zeusdeux/isInViewport) -->
+    <script src="js/bootstrap.min.js"></script>             <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
+    <script src="js/hero-slider-main.js"></script>          <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
+    <script src="js/jquery.magnific-popup.min.js"></script> <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
+    <script>
+
+    function adjustHeightOfPage(pageNo) {
+
+      var offset = 80;
+      var pageContentHeight = $(".cd-hero-slider li:nth-of-type(" + pageNo + ") .js-tm-page-content").height();
+
+      if($(window).width() >= 992) { offset = 120; }
+      else if($(window).width() < 480) { offset = 40; }
+
+      // Get the page height
+      var totalPageHeight = 335 + $('.cd-slider-nav').height()
+        + pageContentHeight + offset
+        + $('.tm-footer').height();
+
+      // Adjust layout based on page height and window height
+      if(totalPageHeight > $(window).height())
+      {
+        $('.cd-hero-slider').addClass('small-screen');
+        $('.cd-hero-slider li:nth-of-type(' + pageNo + ')').css("min-height", totalPageHeight + "px");
+      }
+      else
+      {
+        $('.cd-hero-slider').removeClass('small-screen');
+        $('.cd-hero-slider li:nth-of-type(' + pageNo + ')').css("min-height", "100%");
+      }
+    }
+
+    function uploadVideo() {
+
+      var videoWrapper = $('.cd-bg-video-wrapper');
+      if( videoWrapper.is(':visible') ) {
+        // if visible - we are not on a mobile device
+        var videoUrl = videoWrapper.data('video'),
+
+          video = $('<video autoplay loop><source src="'+videoUrl+'.mp4" type="video/mp4" /></video>');
+        video.appendTo(videoWrapper);
+
+        // play video if first slide
+        if(videoWrapper.parent('.cd-bg-video.selected').length > 0) video.get(0).play();
+      }
+    }
+
+    // Everything is loaded including images.
+    $(window).load(function(){
+
+      adjustHeightOfPage(1); // Adjust page height
+
+      // Background Video
+      if($( window ).width() > 800) {
+        uploadVideo();
+      }
+
+      /* Gallery One pop up
+      -----------------------------------------*/
+      $('.gallery-first').magnificPopup({
+        delegate: 'a', // child items selector, by clicking on it popup will open
+        type: 'image',
+        gallery:{enabled:true}
+      });
+
+      /* Gallery Two pop up
+      -----------------------------------------*/
+      $('.gallery-second').magnificPopup({
+        delegate: 'a', // child items selector, by clicking on it popup will open
+        type: 'image',
+        gallery:{enabled:true}
+      });
+
+      /* Collapse menu after click
+      -----------------------------------------*/
+      $('#tmNavbar a').click(function(){
+        $('#tmNavbar').collapse('hide');
+
+        adjustHeightOfPage($(this).data("no")); // Adjust page height
+      });
+
+      /* Browser resized
+      -----------------------------------------*/
+      $( window ).resize(function() {
+        var currentPageNo = $(".cd-hero-slider li.selected .js-tm-page-content").data("page-no");
+
+        // wait 3 seconds
+        setTimeout(function() {
+          adjustHeightOfPage( currentPageNo );
+        }, 3000);
+
+        if($( window ).width() > 800) {
+          uploadVideo();
+        }
+
+      });
+
+      // Play video only when visible
+      // https://stackoverflow.com/questions/21163756/html5-and-javascript-to-play-videos-only-when-visible
+      $('video').each(function(){
+        if ($(this).is(":in-viewport")) {
+          $(this)[0].play();
+        } else {
+          $(this)[0].pause();
+        }
+      })
+
+      // Remove preloader (https://ihatetomatoes.net/create-custom-preloading-screen/)
+      $('body').addClass('loaded');
+      $('.tm-current-year').text(new Date().getFullYear());
+
+    });
+
+  </script>
 </template>
