trying to get js to work

--- a/wakepark_front/index.html
+++ b/wakepark_front/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
     <link rel="stylesheet" href="css/tooplate-style.css">
+    <script src="src/js/jquery-1.11.3.min.js"></script>         <!-- jQuery (https://jquery.com/download/) -->
+    <script src="src/js/tether.min.js"></script>                <!-- http://tether.io/ -->
+    <script src="src/js/isInViewport.min.js"></script>          <!-- isInViewport js (https://github.com/zeusdeux/isInViewport) -->
+    <script src="src/js/bootstrap.min.js"></script>             <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
+    <script src="src/js/hero-slider-main.js"></script>          <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
+    <!--<script src="src/js/jquery.magnific-popup.min.js"></script> <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
     <title>Aurelia</title>
   </head>
 
