--- a/wakepark_front/src/app.html
+++ b/wakepark_front/src/app.html
@@ -52,8 +52,8 @@
                       </div>
                       <div class="tm-home-description-container tm-bg-dark-blue">
                         <div class="queue">
-                          <div class="column">blabla</div>
-                          <div class="column">blabla</div>
+                          <div class="column">blabla ${message}</div>
+                          <div class="column">blabla <p id="suva"></p><script>lihtsaltfn();</script></div>
                           <div class="column">blabla</div>
                         </div>
                       </div>
@@ -241,12 +241,6 @@
       </footer>
     </div> <!-- .cd-hero -->
 
-    <script src="js/jquery-1.11.3.min.js"></script>         <!-- jQuery (https://jquery.com/download/) -->
-    <script src="js/tether.min.js"></script>                <!-- http://tether.io/ -->
-    <script src="js/isInViewport.min.js"></script>          <!-- isInViewport js (https://github.com/zeusdeux/isInViewport) -->
-    <script src="js/bootstrap.min.js"></script>             <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
-    <script src="js/hero-slider-main.js"></script>          <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
-    <script src="js/jquery.magnific-popup.min.js"></script> <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
     <script>
 
     function adjustHeightOfPage(pageNo) {
