--- a/wakepark_front/src/app.html
+++ b/wakepark_front/src/app.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="cd-bg-video-wrapper">
+    <div class="cd-bg-video-wrapper" style="background: url('../img/DSC04121-1.jpg') no-repeat; background-size: cover;">
       <!-- video element will be loaded using jQuery -->
     </div>
     <div class="cd-hero">
