--- a/wakepark_front/index.html
+++ b/wakepark_front/index.html
@@ -6,23 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/hero-slider-style.css">
-    <!-- Hero slider style (https://codyhouse.co/gem/hero-slider/) -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
     <link rel="stylesheet" href="css/tooplate-style.css">
-    <script src="src/js/jquery-1.11.3.min.js"></script>         <!-- jQuery (https://jquery.com/download/) -->
-    <script src="src/js/tether.min.js"></script>                <!-- http://tether.io/ -->
-    <script src="src/js/isInViewport.min.js"></script>          <!-- isInViewport js (https://github.com/zeusdeux/isInViewport) -->
-    <script src="src/js/bootstrap.min.js"></script>             <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
-    <script src="src/js/hero-slider-main.js"></script>          <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
-    <!--<script src="src/js/jquery.magnific-popup.min.js"></script> <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
     <title>Aurelia</title>
   </head>
 
   <body aurelia-app="main">
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+       <div class="cd-bg-video-wrapper" style="background: url('../img/DSC04121-1.jpg') no-repeat; background-size: cover;">
+    </div>
   </body>
 </html>
