--- a/wakepark_front/index.html
+++ b/wakepark_front/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/tooplate-style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Aurelia</title>
   </head>
 
   <body aurelia-app="main">
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
-       <div class="cd-bg-video-wrapper" style="background: url('../img/DSC04121-1.jpg') no-repeat; background-size: cover;">
-    </div>
   </body>
 </html>
