--- a/wakepark_front/src/app.html
+++ b/wakepark_front/src/app.html
@@ -10,6 +10,8 @@
       </li>
       <li> <a class="nav-button"  href="">Info</a>
       </li>
+      <li> <a class="nav-button"  click.delegate=registerPage() href="">Töötaja</a>
+      </li>
     </ul>
   </div>
   <div id="content">
