--- a/wakepark_front/src/login/login.html
+++ b/wakepark_front/src/login/login.html
@@ -3,12 +3,12 @@
     <p class="login-text">LOGI SISSE <br> JA BRONEERI SÕIDUAEG</p>
   </div>
   <div class="login-container">
-    <form role="form" submit.delegate='register()' class="login-form">
+    <form role="form" submit.delegate='login()' class="login-form">
       <div style="padding-top: 10px;">
-        <input type="text" id="username" name="username" class="form-input" placeholder="Kasutajanimi"  required/>
+        <input type="text" id="username" name="username" class="form-input" value.bind="data.username" placeholder="Kasutajanimi"  required/>
       </div>
       <div class="form-group">
-        <input type="password" id="password" name="password" class="form-input" placeholder="Parool"  required/>
+        <input type="password" id="password" name="password" class="form-input" value.bind="data.password" placeholder="Parool"  required/>
       </div>
       <button type="submit" class="login-button">Logi sisse</button>
     </form>
