--- a/wakepark_front/src/register/register.html
+++ b/wakepark_front/src/register/register.html
@@ -3,26 +3,27 @@
     <div class="register-text">REGISTREERI <br> KASUTAJA </div>
   </div>
   <div class="register-container">
-    <form role="form" class="register-form" submit.delegate="register()">
+    <form id="registerForm" class="register-form" submit.delegate="registerUser()">
       <div style="padding-top: 10px;">
-        <input type="text" id="firstname" name="firstname" class="form-input" placeholder="Eesnimi"  required/>
+        <input type="text" id="firstname" name="firstname" class="form-input" value.bind="userData.firstName" placeholder="Eesnimi"  required/>
       </div>
       <div class="form-group">
-        <input type="text" id="surname" name="surname" class="form-input" placeholder="Perekonnanimi"  required/>
+        <input type="text" id="surname" name="surname" class="form-input" value.bind="userData.lastName" placeholder="Perekonnanimi"  required/>
       </div>
       <div class="form-group">
-        <input type="text" id="username" name="username" class="form-input" placeholder="Kasutajanimi"  required/>
+        <input type="text" id="username" name="username" class="form-input" value.bind="userData.username" placeholder="Kasutajanimi"  required/>
       </div>
       <div class="form-group">
-        <input type="text" id="password_reg" name="password_reg" class="form-input" placeholder="Parool"  required/>
+        <input type="text" id="password_reg" name="password_reg" class="form-input" value.bind="userData.password" placeholder="Parool"  required/>
       </div>
       <div class="form-group">
-        <input type="email" id="email" name="email" class="form-input" placeholder="E-mail"  required/>
+        <input type="email" id="email" name="email" class="form-input" value.bind="userData.email" placeholder="E-mail"  required/>
       </div>
       <div class="form-group">
-        <input type="number" id="phonenumber" name="phonenumber" class="form-input" placeholder="Telefoninumber"  required/>
+        <input type="number" id="phonenumber" name="phonenumber" class="form-input" value.bind="userData.phoneNr" placeholder="Telefoninumber"  required/>
       </div>
       <button type="submit" class="submit-button">Registreeri</button>
+      <p class="confirmation">${message}</p>
     </form>
   </div>
 </template>
