Sisselogimine ja väljalogimine

--- a/wakepark_front/src/login/login.html
+++ b/wakepark_front/src/login/login.html
@@ -11,6 +11,7 @@
         <input type="password" id="password" name="password" class="form-input" value.bind="userData.password" placeholder="Parool"  required/>
       </div>
       <button type="submit" class="login-button">Logi sisse</button>
+      <p class="confirmation">${message}</p>
     </form>
   </div>
 </template>
