--- a/wakepark_front/src/userHome/userHome.html
+++ b/wakepark_front/src/userHome/userHome.html
@@ -46,5 +46,6 @@
       </div>
       <button class="register-button" style="margin-top: 15px;">Broneeri</button>
     </form>
+    <button id="logout" click.delegate=logout()>Log out</button>
   </div>
 </template>
