--- a/wakepark_front/src/info/info.html
+++ b/wakepark_front/src/info/info.html
@@ -1,6 +1,5 @@
 <template>
-  <div style="width: 100%; margin-top: 100px;"></div>
-  <div style=" height: 800px; width: 850px; margin-left: auto; margin-right: auto;">
+  <div style=" height: 500px; width: 850px; margin-left: auto; margin-right: auto; margin-top:100px;">
     <div class="info-header">
       <p class="info-header-text">VEELAUASÕIT</p>
       <div class="info-container">
@@ -8,9 +7,15 @@
       </div>
     </div>
     <div class="info-header" style="margin-left: 20px;">
-      <p class="info-header-text">VEELAUASÕIT</p>
+      <p class="info-header-text">MUUD TEENUSED</p>
       <div class="info-container">
-        <p class="info-text">1 korra pilet 10 minutit: 10€<br>3 korra pilet: 25€ / 27€<br>10 korra pilet: 65€ / 75€<br>30 korra pilet: 150€ / 180€<br>50 korra pilet: 200€ / 230€<br>100 korra pilet: 310€ / 360€</p>
+        <p class="info-text">SUP laenutus: 10€/tund<br>
+          Kalipso rent: 2€/kord<br>
+          Discgolfi ketaste rent: 3€/3h<br>
+          Sportbatuut: tasuta<br>
+          Võrkpalliväljak: tasuta<br>
+          Kiiged ja liumägi lastele: tasuta<br>
+          Pinksi mängimine: tasuta</p>
       </div>
     </div>
   </div>
