--- a/wakepark_front/src/navbar.html
+++ b/wakepark_front/src/navbar.html
@@ -1,6 +1,7 @@
 <template bindable="router">
   <div>
     <ul class="nav-bar">
+      <p class="banner">ESTRELLA WAKEPARK</p>
       <li repeat.for="nav of router.navigation">
         <a class="nav-button" href.bind="nav.href">${nav.title}</a>
       </li>
