--- a/wakepark_front/src/register/register.html
+++ b/wakepark_front/src/register/register.html
@@ -22,6 +22,9 @@
       <div class="form-group">
         <input type="number" id="phonenumber" name="phonenumber" class="form-input" value.bind="userData.phoneNr" placeholder="Telefoninumber"  required/>
       </div>
+      <div class="form-group">
+        <input type="number" id="rides" name="rides" class="form-input" placeholder="Sõidukorrad" value.bind="userData.rides"required/>
+      </div>
       <button type="submit" class="submit-button">Registreeri</button>
       <p class="confirmation">${message}</p>
     </form>
