--- a/wakepark_front/src/userHome/userHome.html
+++ b/wakepark_front/src/userHome/userHome.html
@@ -1,6 +1,8 @@
 <template>
   <div class="heading">
-    <h2 class="front">ESTRELLA WAKEPARK</h2>
+    <h2 class="front">ESTRELLA WAKEPARK
+      <button class="logout-button" id="logout" click.delegate=logout() style="height:50px;"><i class="fas fa-sign-out-alt fa-2x"></i></button>
+    </h2>
   </div>
   <div class="queue-container">
     <div class="tracks-container">
@@ -45,6 +47,5 @@
       <button class="register-button" style="margin-top: 15px;">Broneeri</button>
     </form>
     <p class="confirmation">${message}</p>
-    <button id="logout" click.delegate=logout()>Log out</button>
   </div>
 </template>
