--- a/wakepark_front/src/employeeHome/employeeHome.html
+++ b/wakepark_front/src/employeeHome/employeeHome.html
@@ -10,15 +10,16 @@
         <div class="track">
           <div class="trackName" style="color: #37baff;">Live Fearless</div>
           <div class="queue">
-            <div repeat.for="ride of liveFearlessReservations" class="rider">${ride.client.firstName}</div>
+            <div repeat.for="ride of liveFearlessReservations" class="rider">${ride.clientName}
+              ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
           </div>
           <div>
-            <form style="float: left;" submit.delegate="reserveClientLiveFearless()">
+            <form name="reserveRide" style="float: left;" submit.delegate="reserveClientLiveFearless()">
               <input type="text" class="riderInput" value.bind="reservationLiveFearless.client" placeholder="Lisa sõitja"/>
             <div style="padding-top: 10px; float: right; margin-left: 10px;">
               <select style="width: 60px;" value.bind="reservationLiveFearless.startTime">
-                <option repeat.for="rideTime of times" value.bind="rideTime.start">
-                  ${rideTime.start}
+                <option repeat.for="rideTime of times" value.bind="rideTime">
+                  ${rideTime}
                 </option>
               </select>
             </div>
@@ -28,15 +29,16 @@
         <div class="track">
           <div class="trackName" style="color: #ff1212;">Estrella</div>
           <div class="queue">
-            <div repeat.for="ride of estrellaReservations" class="rider">${ride.client.firstName}</div>
+            <div repeat.for="ride of estrellaReservations" class="rider">${ride.clientName}
+              ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
           </div>
           <div>
-            <form style="float: left;" submit.delegate="reserveClientEstrella()">
+            <form name="reserveRide" style="float: left;" submit.delegate="reserveClientEstrella()">
               <input type="text" class="riderInput" value.bind="reservationEstrella.client" placeholder="Lisa sõitja"/>
             <div style="padding-top: 10px; float: right; margin-left: 10px;">
               <select value.bind="reservationEstrella.startTime" style="width: 60px;">
-                <option repeat.for="rideTime of times" value.bind="rideTime.start">
-                  ${rideTime.start}
+                <option repeat.for="rideTime of times" value.bind="rideTime">
+                  ${rideTime}
                 </option>
               </select>
             </div>
@@ -46,19 +48,21 @@
         <div class="track">
           <div class="trackName" style="color: #000000;">Red Bull</div>
           <div class="queue">
-            <div repeat.for="ride of redBullReservations" class="rider">${ride.client.firstName}</div>
+            <div repeat.for="ride of redBullReservations" class="rider">${ride.clientName}
+              ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
           </div>
           <div>
-            <form style="float: left;" submit.delegate="reserveClientRedBull()">
+            <form name="reserveRide" style="float: left;" submit.delegate="reserveClientRedBull()">
               <input type="text" class="riderInput" value.bind="reservationRedBull.client" placeholder="Lisa sõitja"/>
             <div style="padding-top: 10px; float: right; margin-left: 10px;">
               <select style="width: 60px;" value.bind="reservationRedBull.startTime">
-                <option repeat.for="rideTime of times" value.bind="rideTime.start">
-                  ${rideTime.start}
+                <option repeat.for="rideTime of times" value.bind="rideTime">
+                  ${rideTime}
                 </option>
               </select>
             </div>
             </form>
+            ${message}
           </div>
         </div>
       </div>
