--- a/wakepark_front/src/info/info.html
+++ b/wakepark_front/src/info/info.html
@@ -6,16 +6,18 @@
         <p class="info-text">1 korra pilet 10 minutit: 10€<br>3 korra pilet: 25€ / 27€<br>10 korra pilet: 65€ / 75€<br>30 korra pilet: 150€ / 180€<br>50 korra pilet: 200€ / 230€<br>100 korra pilet: 310€ / 360€</p>
       </div>
     </div>
-    <div class="info-header" style="margin-left: 20px;">
-      <p class="info-header-text">MUUD TEENUSED</p>
-      <div class="info-container">
-        <p class="info-text">SUP laenutus: 10€/tund<br>
-          Kalipso rent: 2€/kord<br>
-          Discgolfi ketaste rent: 3€/3h<br>
-          Sportbatuut: tasuta<br>
-          Võrkpalliväljak: tasuta<br>
-          Kiiged ja liumägi lastele: tasuta<br>
-          Pinksi mängimine: tasuta</p>
+    <div style="height: 500px; width: 850px; margin-left: auto; margin-right: auto; margin-top: 125px;">
+      <div class="info-header" style="margin-left: 20px;">
+        <p class="info-header-text">MUUD TEENUSED</p>
+        <div class="info-container">
+          <p class="info-text">SUP laenutus: 10€/tund<br>
+            Kalipso rent: 2€/kord<br>
+            Discgolfi ketaste rent: 3€/3h<br>
+            Sportbatuut: tasuta<br>
+            Võrkpalliväljak: tasuta<br>
+            Kiiged ja liumägi lastele: tasuta<br>
+            Pinksi mängimine: tasuta</p>
+        </div>
       </div>
     </div>
   </div>
