Kuvatakse ainult lähenevaid aegu (õiges järjestuses). Kasutaja saab oma isikuandmeid ja parooli muuta.

--- a/wakepark_front/src/employeeHome/employeeHome.html
+++ b/wakepark_front/src/employeeHome/employeeHome.html
@@ -1,7 +1,6 @@
 <template>
   <div class="heading">
-    <h2 class="front">ESTRELLA WAKEPARK ${name}
-      <button class="logout-button" id="logout" click.delegate='logout()'><i class="fas fa-sign-out-alt fa-2x"></i></button>
+    <h2 class="front">ESTRELLA WAKEPARK
     </h2>
   </div>
   <div class="queue-container">
